# hazel

./: .travis.yml  README.md  hazel.cabal  stack.yaml
app/: Main.hs
frontend/: Computation.js  Editor.js  package.json
frontend/.storybook/: computation.js  config.js  editor.js
src/: Hazel.hs
src/Hazel/: AST.hs  CofreeAST.hs  Core.hs  Eval.hs  Lex.hs  Parse.hs  Surface.hs  SurfaceToCore.hs  Tokenize.hs  Var.hs
test/: Spec.hs
test/Spec/: Eval.hs  Parse.hs
